--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!-- index.html -->
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>My Nginx</title>
 </head>
 
 <body>
-  <h1>SUCCESS!</h1>
+  <h1>SUCCESS! WANT GO HOME</h1>
 </body>
+
 </html>
